# RaftLib

./: .gitignore  .gitmodules  .travis.yml  404.html  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CNAME  Doxyfile  Doxyfile.bak  Makefile  README.md  TODO.md  _config.yml  affinity.hpp  allocate.cpp  allocate.hpp  basicparallel.cpp  basicparallel.hpp  cmake_install.cmake  common.cpp  common.hpp  container.tcc  containerblock.cpp  containerblock.hpp  data.M7QJ2z  debug.txt  dynalloc.cpp  dynalloc.hpp  fileio.tcc  foo.cpp  foreach.tcc  foreach.tcc.tcc  globalmap.cpp  graph.tcc  graphtools.cpp  graphtools.hpp  gslcheck.pl  index.html  index.md  (+90 more)
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE
ExampleApps/: .acsearch.tcc.swp  .bmsearch.tcc.swp  .fileio.tcc.swp  .log2.txt.swp  .print.tcc.swp  .readtest.cpp.swp  .rgrep.cpp.swp  .rksearch.tcc.swp  .rkverifymatch.cpp.swp  .rkverifymatch.hpp.swp  .search.tcc.swp  .singlequeue.cpp.swp  .sumapp.cpp.swo  .sumapp.cpp.swp  Makefile  acsearch.tcc  applegrep.csv  bmsearch.tcc  data.CBlX7r  errlog.txt  execmd  fileio.tcc  gnugrep.csv  gnugrep2.csv  log  log.txt  print.tcc  readtest  readtest.cpp  results_bsd_grep.csv  rgrep.cpp  rksearch.tcc  rkverifymatch.cpp  rkverifymatch.hpp  rungrep.pl  rungrep2.pl  search.tcc  searchdefs.hpp  singlequeue.cpp  sumapp  (+2 more)
TestCases/: .Makefile.swp  .allocate.cpp.swp  .allocate_s.cpp.swp  .dynallocate.cpp.swp  .foreach.cpp.swp  .join.cpp.swp  .lambdatest.cpp.swp  .partitionTest.cpp.swp  .split.cpp.swp  Makefile  TODO.md  allocate  allocate.cpp  allocate_out_expect.txt  allocate_s  allocate_s.cpp  dynallocate  dynallocate.cpp  dynallocate_err_expect.txt  dynallocate_out_expect.txt  errlog.txt  foreach  foreach.cpp  gamma.cpp  gaussian.cpp  iterator.cpp  join  join.cpp  lambdatest  lambdatest.cpp  mypartlog.csv  partitionTest.cpp  peekrange  peekrange.cpp  portTypeException  portTypeException.cpp  portTypeException_out_expect.txt  print.tcc  random.cpp  runpartition.pl  (+7 more)
ToyApp/: .Makefile.swp  .main.cpp.swo  .main.cpp.swp  build.sh  kernel.hpp  main.cpp  map.hpp  sumapp
benchmarks/: CMakeLists.txt
benchmarks/histogram/: CMakeLists.txt  Makefile  MapReduceScheduler.c  README  hist-raft.cpp  hist-seq.c  hist.c
benchmarks/prefetch/: CMakeLists.txt  prefetchBench.cpp
cmake/: .FindScotch.cmake.swp  .FindTcmalloc.cmake.swp  .pkg-config.pc.cmake.swp  CheckBoostDep.cmake  CheckGitDep.cmake  CheckSTD.cmake  Colors.cmake  FindLIBRT.cmake  FindNUMA.cmake  FindQThreads.cmake  FindScotch.cmake  FindUT.cmake  PkgConfigHelper.cmake  pkg-config.pc.cmake
examples/: CMakeLists.txt  Makefile  multapp.cpp  readtest  readtest.cpp  singlequeue.cpp  sumapp.cpp
examples/cppalgo/search/: .CMakeLists.txt.swp  .bmh.cpp.swp  .text.swp  CMakeLists.txt  Makefile  bmh.cpp  text
examples/general/: CMakeLists.txt  Makefile
examples/general/multiply/: CMakeLists.txt  multapp.cpp
examples/general/pbzip_raft/: .pbzip2.cpp.swp  .rbzip2.cpp.swp  CMakeLists.txt  README.md  rbzip2.cpp
examples/general/pi/: CMakeLists.txt  Makefile  pisim.cpp
examples/general/rbzip2/: CMakeLists.txt  README.md  alice.txt  rbzip2.cpp
examples/general/readfile/: CMakeLists.txt  readtest.cpp
examples/general/simple/: CMakeLists.txt  simple.cpp
examples/general/singlequeue/: CMakeLists.txt  singlequeue.cpp
examples/general/sum/: CMakeLists.txt  sumapp.cpp
examples/opencv/: CMakeLists.txt  Makefile  README.md  contours.cpp
fifo/: ':u  .SystemClock.tcc.swp  .bufferdata.tcc.swo  .bufferdata.tcc.swp  .cpy_assembly.c.swp  .datamanager.tcc.swo  .datamanager.tcc.swp  .departureratesampletype.tcc.swp  .fifo.hpp.swp  .fifoabstract.tcc.swp  .foo.c.swp  .monitor.hpp.swp  .pointer.cpp.swp  .pointer.hpp.swp  .ringbufferbase.tcc.swp  .ringbufferheap.tcc.swo  .ringbufferheap.tcc.swp  .ringbufferinfinite.tcc.swp  .signaldata.cpp.swp  .signalvars.hpp.swp  .systeminfo.cpp.swp  .systeminfo.hpp.swp  Clock.cpp  Clock.hpp  (+46 more)
helpers/cache_info/: CMakeLists.txt
raftinc/: .chunkiterator.tcc.swp  .fifo.hpp.swp  .fileio.tcc.swp  .graph.tcc.swp  .kernel_pair_t.hpp.swp  .kpair.hpp.swp  .mapbase.hpp.swp  .random.tcc.swp  CMakeLists.txt  README.md  alloc_defs.hpp  alloc_traits.tcc  allocate.hpp  arrivalratesampletype.tcc  autorelease.tcc  autoreleasebase.hpp  basicparallel.hpp  blocked.hpp  bufferdata.tcc  chunkiterator.tcc  common.hpp  container.tcc  database.tcc  datamanager.tcc  dct.tcc  defs.hpp  demangle.hpp  departureratesampletype.tcc  dynalloc.hpp  element.tcc  fifo.hpp  fifoabstract.tcc  filechunk.tcc  fileio.tcc  filter.tcc  foreach.tcc  gate.hpp  gatekeeper.hpp  getrandom.h  graph.tcc  (+106 more)
raftinc/gslrnd/: README.md  random.tcc  randombase.hpp  randomx.tcc
src/: .kpair.cpp.swp  .poolschedule.cpp.swp  .port_info.cpp.swp  .schedule.cpp.swp  CMakeLists.txt  affinity.cpp  allocate.cpp  basicparallel.cpp  blocked.cpp  common.cpp  cpy_assembly.c  cpy_assembly.cpp  demangle.cpp  dynalloc.cpp  fifo.cpp  getrandom.c  graphtools.cpp  kernel.cpp  kernel_all.cpp  kernel_pair_t.cpp  kernel_wrapper.cpp  kernelexception.cpp  kpair.cpp  leastusedfirst.cpp  makedot.cpp  manipbase.cpp  map.cpp  mapbase.cpp  mapexception.cpp  noparallel.cpp  parallelk.cpp  parsemap.cpp  parsetree.cpp  partition_basic.cpp  partition_dummy.cpp  partition_scotch.cpp  pointer.cpp  poolschedule.cpp  port.cpp  port_info.cpp  (+19 more)
testsuite/: .CMakeLists.txt.swp  .partitionTest.cpp.swp  .uniform.cpp.swp  CMakeLists.txt  KsetJoin.cpp  Makefile  Makefile.testraft10  TODO.md  allocate.cpp  allocatePopExternal.cpp  allocatePopInternal.cpp  allocatePopInternalObject.cpp  allocatePopPush.cpp  allocateRefWrapperOneLHS.cpp  allocateRefWrapperOneRHS.cpp  allocateSendPush.cpp  allocateSendRandomPush.cpp  allocate_s.cpp  allocate_s_string.cpp  allpush.cpp  ap.cpp  bracketsTest.cpp  chain.cpp  chainDynamic.cpp  chainMultiplePorts.cpp  chainMultiplePortsDynamic.cpp  commontestdefs.hpp  contSplitKsetJoin.cpp  demangle.cpp  disconnectedGraph.cpp  doesntFitInCacheLine.cpp  dynallocate.cpp  exponential.cpp  fitInCacheLine.cpp  fixedAllocate.cpp  fixedMatchTest.cpp  foodef.tcc  foreach.cpp  gamma.cpp  gaussian.cpp  (+73 more)
(+2193 files in other folders)
